<resources>
    <string name="app_name">Andalucia Compromiso Digital</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_surname">Apellidos</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_nif">NIF</string>
    <string name="hint_discap">Discapacidad</string>
    <string name="hint_tfno">Teléfono</string>
    <string name="hint_birth">Fecha de Nacimiento</string>
    <string name="button_register">Registrarse</string>
</resources>
