<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_juntadeandalucia" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/editTextApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_surname"
        android:inputType="textPersonName"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/editTextNif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nif"
        android:inputType="textPersonName"
        android:paddingBottom="16dp" />

    <CheckBox
        android:id="@+id/checkBoxDiscapacidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_discap" />

    <EditText
        android:id="@+id/editTextTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_tfno"
        android:inputType="number"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/editTextFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_birth"
        android:inputType="date"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_register" />
</LinearLayout>